[package]
name = "my-first-todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"

# https://docs.rs/strum/0.20.0/strum/
# 列挙型と文字列を簡単に操作するためのマクロ
strum = "0.20.0"
strum_macros = "0.20"

# データをシリアライズ/デシリアライズするややつ
serde = "1"
serde_derive = "1"